Fix button contrast issues and add pointer cursors

--- a/css/global.css
+++ b/css/global.css
@@ -85,6 +85,7 @@ a:hover {
   width: 1px;
   height: 1px;
   overflow: hidden;
+  color: white;
 }
 
 /* ---------- Header ---------- */
